# visualization.projectm

./: .travis.yml  0001-hacky-removal-of-glew-pm-git.patch  0001-hacky-removal-of-glew.patch  01-pm-fix-freetype.patch  02-pm-fix-order.patch  AddonVersion.cmake  CMakeLists.txt  FindGLEW.cmake  FindOpenGLES.cmake  FindProjectM.cmake  Jenkinsfile  README.md  appveyor.yml  azure-pipelines.yml  bootstrap  configure.in
.github/workflows/: increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/freetype/: CMakeLists.txt
depends/common/ftgl/: CMakeLists.txt
depends/common/glm/: 01-disable-shared.patch  glm.sha256  glm.txt
depends/common/projectm/: 0001-allow-separate-folder-structure-of-presets-during-in.patch  0001-fix-mac-install.patch  01-fix-projectm-cmakelists.patch  01-fix-qt-configure.patch  02-pm-fix-order.patch  04-fix-pkgconfig.patch  CMakeLists.txt  deps.txt  flags.txt  projectm.sha256  projectm.txt
depends/linux/freetype/: CMakeLists.txt  freetype.sha256  freetype.txt
depends/linux/ftgl/: CMakeLists.txt  ftgl.sha256  ftgl.txt
depends/linux/projectm/: 0001-build-native-presets-libs-static.patch  0002-install-libraries.patch  0003-fix-pkgconfig-file.patch  0004-fix-namespace-issue.patch  0005-do-not-compare-references-to-pointers.patch  0006-remove-glew-usage.patch  01-datadir.patch  08-fix-linux-include.patch  08-fix-namespace.patch  09-fix-istream-error-check.patch  deps.txt  flags.txt  projectm.sha256  projectm.txt
depends/osx/projectm/: 01-build-native-presets-libs-static.patch  02-fix-projectm-cmakelists.patch  03-diable-ramebuffer-binding.patch  04-fix-pkgconfig.patch  05-install-renderlib.patch  06-install-nativefactory.patch  07-install-milkdropfactory.patch  08-fix-osx-compile.patch  flags.txt  projectm.sha256  projectm.txt
depends/windows/dirent/: dirent.sha256  dirent.txt
depends/windows/projectm/: 0002-add-angle-to-GL-include-and-become-Win-working.patch  0003-change-SOIL2-to-use-on-angle.patch  CMakeLists.txt  projectm.sha256  projectm.txt
depends/windowsstore/projectm/: 0001-kodi-cmake-fixes.patch  0003-change-SOIL2-to-use-on-angle.patch  CMakeLists.txt  deps.txt  projectm.txt
lib/libprojectM/: cmake_install.cmake
src/: Main.cpp  Main.h  Makefile.am
visualization.projectm/: addon.xml  addon.xml.in
visualization.projectm/resources/: settings.xml
visualization.projectm/resources/language/Afrikaans/: strings.po
visualization.projectm/resources/language/Amharic/: strings.po
visualization.projectm/resources/language/Arabic/: strings.po
visualization.projectm/resources/language/Belarusian/: strings.po
visualization.projectm/resources/language/Bulgarian/: strings.po
visualization.projectm/resources/language/Catalan/: strings.po
visualization.projectm/resources/language/Chinese (Traditional)/: strings.po
visualization.projectm/resources/language/Croatian/: strings.po
visualization.projectm/resources/language/Czech/: strings.po
visualization.projectm/resources/language/Danish/: strings.po
visualization.projectm/resources/language/Dutch/: strings.po
visualization.projectm/resources/language/English/: strings.po
visualization.projectm/resources/language/English (Australia)/: strings.po
visualization.projectm/resources/language/English (New Zealand)/: strings.po
visualization.projectm/resources/language/English (US)/: strings.po
visualization.projectm/resources/language/Finnish/: strings.po
visualization.projectm/resources/language/French (Canada)/: strings.po
visualization.projectm/resources/language/Galician/: strings.po
visualization.projectm/resources/language/Hebrew/: strings.po
visualization.projectm/resources/language/Hungarian/: strings.po
visualization.projectm/resources/language/Indonesian/: strings.po
visualization.projectm/resources/language/Italian/: strings.po
visualization.projectm/resources/language/Lithuanian/: strings.po
visualization.projectm/resources/language/Macedonian/: strings.po
visualization.projectm/resources/language/Polish/: strings.po
visualization.projectm/resources/language/Portuguese/: strings.po
visualization.projectm/resources/language/Slovenian/: strings.po
visualization.projectm/resources/language/Tajik/: strings.po
visualization.projectm/resources/language/Ukrainian/: strings.po
visualization.projectm/resources/language/resource.language.af_za/: strings.po
visualization.projectm/resources/language/resource.language.am_et/: strings.po
visualization.projectm/resources/language/resource.language.ar_sa/: strings.po
visualization.projectm/resources/language/resource.language.az_az/: strings.po
visualization.projectm/resources/language/resource.language.be_by/: strings.po
visualization.projectm/resources/language/resource.language.bg_bg/: strings.po
visualization.projectm/resources/language/resource.language.bs_ba/: strings.po
visualization.projectm/resources/language/resource.language.ca_es/: strings.po
visualization.projectm/resources/language/resource.language.cs_cz/: strings.po
visualization.projectm/resources/language/resource.language.cy_gb/: strings.po
visualization.projectm/resources/language/resource.language.da_dk/: strings.po
visualization.projectm/resources/language/resource.language.de_de/: strings.po
visualization.projectm/resources/language/resource.language.el_gr/: strings.po
visualization.projectm/resources/language/resource.language.en_au/: strings.po
visualization.projectm/resources/language/resource.language.en_gb/: strings.po
visualization.projectm/resources/language/resource.language.en_nz/: strings.po
visualization.projectm/resources/language/resource.language.en_us/: strings.po
visualization.projectm/resources/language/resource.language.eo/: strings.po
visualization.projectm/resources/language/resource.language.es_ar/: strings.po
visualization.projectm/resources/language/resource.language.es_es/: strings.po
visualization.projectm/resources/language/resource.language.es_mx/: strings.po
(+47 files in other folders)
